syntax = "proto3";

package raft;

option go_package = "internal/grpc/proto;proto";

service RaftService {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidateID = 2;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderID = 2;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}